# multichain

./: .env  .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
src/backend/: Cargo.toml  backend.did
src/backend/src/: commitment.rs  lib.rs  message.rs  nonce.rs  types.rs  verify.rs
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/frontend/src/: App.tsx  main.tsx
src/frontend/src/components/: AuthGate.tsx  BalanceTable.tsx  BridgeAttemptsEditor.tsx  ConnectWalletDialog.tsx  Field.tsx  HolderForm.tsx  LinkWalletStep.tsx  LocalBanner.tsx  PositionsEditor.tsx  PostIncidentAcquisitionsEditor.tsx  PrincipalChip.tsx  RevisionHistory.tsx  StatsBar.tsx  WalletAttestationForm.tsx  WalletsPanel.tsx
src/frontend/src/lib/: auth.ts  backend.ts  contracts.ts  dataCommitment.ts  format.ts  message.ts  parity.test.ts  wagmi.ts
src/frontend/src/pages/: Admin.tsx  Dashboard.tsx  Landing.tsx  Verify.tsx
src/frontend/src/styles/: index.css
