[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-stable-structures = "0.6"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "sha256", "alloc"] }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
hex-literal = "0.4"
